--- a/src/@core/scss/base/bootstrap-extended/_navbar.scss
+++ b/src/@core/scss/base/bootstrap-extended/_navbar.scss
@@ -28,7 +28,7 @@
   }
 
   // Apply navbar color as per background
-  &[class*='bg-'] {
+  &[class*="bg-"] {
     .navbar-nav {
       .nav-item {
         > a {
@@ -65,9 +65,10 @@
   &.floating-nav {
     position: fixed;
     right: 0;
-    margin: #{$floating-nav-margin} #{$content-padding} 0;
-    width: calc(100vw - (100vw - 100%) - calc(#{$content-padding} * 2) - #{$menu-expanded-width});
-    border-radius: $card-border-radius;
+    // margin: #{$floating-nav-margin} #{$content-padding} 0;
+    // width: calc(100vw - (100vw - 100%) - calc(#{$content-padding} * 2) - #{$menu-expanded-width});
+    width: 100%;
+    // border-radius: $card-border-radius;
     z-index: 12;
   }
 
@@ -108,7 +109,7 @@
   //*------------------------
 
   .navbar-container {
-    padding: 0.8rem 1rem;
+    padding: 0.7rem 1rem;
     // Added more horizontal padding above small screen
     @include media-breakpoint-up(sm) {
       padding: 0.8rem 1.4rem;
@@ -256,7 +257,8 @@
         }
 
         > a.nav-link {
-          color: $body-color;
+          // color: $body-color;
+          color: white;
           padding: 0 0.5rem;
           position: relative;
         }
@@ -292,7 +294,8 @@
           }
 
           img {
-            box-shadow: 0 4px 8px 0 rgba($black, 0.12), 0 2px 4px 0 rgba($black, 0.08);
+            box-shadow: 0 4px 8px 0 rgba($black, 0.12),
+              0 2px 4px 0 rgba($black, 0.08);
           }
         }
 
@@ -390,7 +393,7 @@
 .navbar-floating {
   // Floating nav should have same padding across all screen
   .navbar-container {
-    padding: 0.8rem 1rem;
+    padding: 0.7rem 1rem;
   }
   .header-navbar-shadow {
     display: block;
@@ -413,7 +416,7 @@
 
 // Navbar colors
 .navbar-light {
-  background: $white;
+  background: black;
 
   &.navbar-horizontal {
     background: $white;
@@ -562,7 +565,7 @@
   .header-navbar {
     // floating nav width
     &.floating-nav {
-      width: calc(100vw - (100vw - 100%) - calc(#{$content-padding} * 2));
+      // width: calc(100vw - (100vw - 100%) - calc(#{$content-padding} * 2));
     }
     &.navbar-static-top {
       left: 0;
@@ -599,11 +602,11 @@
 @include media-breakpoint-down(xs) {
   .header-navbar {
     &.floating-nav {
-      width: calc(
-        100vw - (100vw - 100%) - calc(#{$content-padding} + 0.4rem)
-      ) !important; // SM screen calc as per updated spacings
-      margin-left: 1rem;
-      margin-right: 1.2rem;
+      // width: calc(
+      //   100vw - (100vw - 100%) - calc(#{$content-padding} + 0.4rem)
+      // ) !important; // SM screen calc as per updated spacings
+      // margin-left: 1rem;
+      // margin-right: 1.2rem;
     }
 
     .navbar-container ul.navbar-nav li .selected-language {
