--- a/src/@core/scss/base/bootstrap-extended/_variables.scss
+++ b/src/@core/scss/base/bootstrap-extended/_variables.scss
@@ -47,7 +47,7 @@ $container-max-widths: (
   md: 720px,
   lg: 960px,
   xl: 1140px,
-  xxl: 1440px // Custom xxl size,
+  xxl: 1440px // Custom xxl size
 ) !default;
 // scss-docs-end container-max-widths
 
@@ -59,29 +59,29 @@ $spacers: map-merge(
   (
     0: 0,
     25: (
-      $spacer * 0.25,
+      $spacer * 0.25
     ),
     50: (
-      $spacer * 0.5,
+      $spacer * 0.5
     ),
     75: (
-      $spacer * 0.75,
+      $spacer * 0.75
     ),
     1: (
-      $spacer,
+      $spacer
     ),
     2: (
-      $spacer * 1.5,
+      $spacer * 1.5
     ),
     3: (
-      $spacer * 3,
+      $spacer * 3
     ),
     4: (
-      $spacer * 3.5,
+      $spacer * 3.5
     ),
     5: (
-      $spacer * 4,
-    ),
+      $spacer * 4
+    )
   ),
   $spacers
 );
@@ -89,8 +89,7 @@ $spacers: map-merge(
 // Body
 //
 // Settings for the `<body>` element.
-// $body-bg: #f8f8f8 !default;
-$body-bg: white !default;
+$body-bg: #f8f8f8 !default;
 $body-color: #6e6b7b !default;
 
 // Links
@@ -128,8 +127,8 @@ $box-shadow: 0 4px 24px 0 rgba($black, 0.1) !default;
 // Font, line-height, and color for body text, headings, and more.
 
 // stylelint-disable value-keyword-case
-$font-family-sans-serif: "Montserrat", Helvetica, Arial, serif !default;
-$font-family-monospace: "Montserrat", Helvetica, Arial, serif !default;
+$font-family-sans-serif: 'Montserrat', Helvetica, Arial, serif !default;
+$font-family-monospace: 'Montserrat', Helvetica, Arial, serif !default;
 
 // stylelint-enable value-keyword-case
 $font-size-base: 1rem !default;
@@ -201,9 +200,7 @@ $btn-border-radius: 0.358rem !default;
 $btn-border-radius-lg: 0.358rem !default;
 $btn-border-radius-sm: 0.358rem !default;
 
-$btn-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-  border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, background 0s,
-  border 0s !default;
+$btn-transition:              color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out, background 0s, border 0s !default;
 
 // Forms
 $custom-control-border-color: #d8d6de;
@@ -243,9 +240,7 @@ $input-height-sm: 2.142rem !default;
 $input-height-lg: 3.2857rem !default;
 
 $input-group-addon-bg: white !default;
-$custom-forms-transition: background-color 0.15s ease-in-out,
-  border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, background 0s,
-  border-color 0s !default;
+$custom-forms-transition:               background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out, background 0s, border-color 0s !default;
 
 $custom-control-indicator-border-color: $custom-control-border-color;
 
@@ -340,7 +335,7 @@ $pagination-font-size-sm: 0.857rem !default; // custom
 // Cards
 $card-spacer-y: 1.5rem !default;
 $card-spacer-x: 1.5rem !default;
-$card-border-radius: 0.628rem !default;
+$card-border-radius: 0.428rem !default;
 
 //Alerts
 
