--- a/src/@core/scss/base/core/menu/_navigation.scss
+++ b/src/@core/scss/base/core/menu/_navigation.scss
@@ -8,7 +8,7 @@
 ==========================================================================================*/
 
 // Import first main menu mixin
-@import "../mixins/main-menu-mixin";
+@import '../mixins/main-menu-mixin';
 
 // Main menu base
 //==============
@@ -18,7 +18,6 @@
   display: table-cell;
   height: 100%;
   overflow: hidden;
-  margin-top: 67px;
 
   &.menu-light {
     @include menu-theme($body-color, $white);
@@ -57,17 +56,9 @@
     pointer-events: none;
     margin-top: -0.7rem;
     filter: blur(5px);
-    background: linear-gradient(
-      #fff 41%,
-      hsla(0, 0%, 100%, 0.11) 95%,
-      hsla(0, 0%, 100%, 0)
-    );
+    background: linear-gradient(#fff 41%, hsla(0, 0%, 100%, 0.11) 95%, hsla(0, 0%, 100%, 0));
     .bordered-layout & {
-      background: linear-gradient(
-        $body-bg 41%,
-        hsla(0, 0%, 100%, 0.11) 95%,
-        hsla(0, 0%, 100%, 0)
-      );
+      background: linear-gradient($body-bg 41%, hsla(0, 0%, 100%, 0.11) 95%, hsla(0, 0%, 100%, 0));
     }
   }
 
@@ -100,13 +91,11 @@
         font-weight: 600;
         letter-spacing: 0.01rem;
         font-size: 1.45rem;
-        animation: 0.3s cubic-bezier(0.25, 0.8, 0.25, 1) 0s normal forwards 1
-          fadein;
+        animation: 0.3s cubic-bezier(0.25, 0.8, 0.25, 1) 0s normal forwards 1 fadein;
       }
     }
     .modern-nav-toggle {
-      animation: 0.3s cubic-bezier(0.25, 0.8, 0.25, 1) 0s normal forwards 1
-        fadein;
+      animation: 0.3s cubic-bezier(0.25, 0.8, 0.25, 1) 0s normal forwards 1 fadein;
     }
   }
 
@@ -125,7 +114,7 @@
 
     &.navigation-main {
       overflow-x: hidden;
-      padding-bottom: 0.75rem;
+      padding-bottom: .75rem;
       > li:first-child {
         margin-top: 0.5rem;
       }
@@ -144,7 +133,7 @@
 
 // Main Navigation
 .navigation {
-  font-size: 14px;
+  font-size: 1.1rem;
   font-family: $font-family-monospace;
   font-weight: 400;
   overflow-y: hidden;
