--- a/src/@core/scss/base/core/mixins/main-menu-mixin.scss
+++ b/src/@core/scss/base/core/mixins/main-menu-mixin.scss
@@ -33,12 +33,8 @@
 @mixin vertical-menu-has-sub-arrow($arrow-font-size) {
   &.has-sub {
     > a:after {
-      content: "";
-      background-image: url(str-replace(
-        str-replace($chevron-right, "currentColor", $body-color),
-        "#",
-        "%23"
-      ));
+      content: '';
+      background-image: url(str-replace(str-replace($chevron-right, 'currentColor', $body-color), '#', '%23'));
       background-repeat: no-repeat;
       background-position: center;
       background-size: $arrow-font-size;
@@ -71,33 +67,24 @@
   height: calc(
     100vh -
       calc(
-        calc(#{$contentPadding} * #{$spacingSides}) + #{$navbarHeight} + #{$footerHeight} +
-          #{$floatingNavMargin} + #{$horizontalMenuHeight}
+        calc(#{$contentPadding} * #{$spacingSides}) + #{$navbarHeight} + #{$footerHeight} + #{$floatingNavMargin} + #{$horizontalMenuHeight}
       )
   );
   height: calc(
     var(--vh, 1vh) * 100 -
       calc(
-        calc(#{$contentPadding} * #{$spacingSides}) + #{$navbarHeight} + #{$footerHeight} +
-          #{$floatingNavMargin} + #{$horizontalMenuHeight}
+        calc(#{$contentPadding} * #{$spacingSides}) + #{$navbarHeight} + #{$footerHeight} + #{$floatingNavMargin} + #{$horizontalMenuHeight}
       )
   );
   // responsive size height
   @if $horizontalLayout {
     @include media-breakpoint-down(lg) {
       height: calc(
-        100vh -
-          calc(
-            calc(calc(#{$contentPadding} - 0.8rem) * #{$spacingSides}) + #{$navbarHeight} +
-              #{$footerHeight}
-          )
+        100vh - calc(calc(calc(#{$contentPadding} - 0.8rem) * #{$spacingSides}) + #{$navbarHeight} + #{$footerHeight})
       );
       height: calc(
         var(--vh, 1vh) * 100 -
-          calc(
-            calc(calc(#{$contentPadding} - 0.8rem) * #{$spacingSides}) + #{$navbarHeight} +
-              #{$footerHeight}
-          )
+          calc(calc(calc(#{$contentPadding} - 0.8rem) * #{$spacingSides}) + #{$navbarHeight} + #{$footerHeight})
       );
     }
   } @else {
@@ -105,19 +92,15 @@
       height: calc(
         100vh -
           calc(
-            calc(
-                calc(#{$contentPadding} * #{$spacingSides}) -
-                  calc(0.8rem * #{$spacingSides})
-              ) + #{$navbarHeight} + #{$footerHeight} + #{$floatingNavMargin} + #{$horizontalMenuHeight}
+            calc(calc(#{$contentPadding} * #{$spacingSides}) - calc(0.8rem * #{$spacingSides})) + #{$navbarHeight} + #{$footerHeight} +
+              #{$floatingNavMargin} + #{$horizontalMenuHeight}
           )
       );
       height: calc(
         var(--vh, 1vh) * 100 -
           calc(
-            calc(
-                calc(#{$contentPadding} * #{$spacingSides}) -
-                  calc(0.8rem * #{$spacingSides})
-              ) + #{$navbarHeight} + #{$footerHeight} + #{$floatingNavMargin} + #{$horizontalMenuHeight}
+            calc(calc(#{$contentPadding} * #{$spacingSides}) - calc(0.8rem * #{$spacingSides})) + #{$navbarHeight} + #{$footerHeight} +
+              #{$floatingNavMargin} + #{$horizontalMenuHeight}
           )
       );
     }
@@ -147,8 +130,7 @@
     background: $theme-bg;
     .navigation-header {
       color: lighten($theme-color, 21.5%);
-      margin: calc(#{$content-padding} + 0.286rem) 0 0.8rem
-        ($content-padding + 0.2rem);
+      margin: calc(#{$content-padding} + 0.286rem) 0 0.8rem ($content-padding + 0.2rem);
       padding: 0;
       line-height: 1.5;
       letter-spacing: 0.01rem;
@@ -163,9 +145,7 @@
         }
       }
       a {
-        // color: darken($theme-color, 4.9%);
-        color: black;
-        font-weight: 500;
+        color: darken($theme-color, 4.9%);
         padding: $menu-padding;
         line-height: 1.45;
 
@@ -247,12 +227,10 @@
       &.active {
         z-index: 1;
         > a {
-          background: #f0f7ff;
-          // background: linear-gradient(118deg, rgba($primary, 1), rgba($primary, 0.7));
-          // box-shadow: 0 0 10px 1px rgba($primary, 0.7);
-          // color: $white;
-          color: #f99c55;
-          font-weight: 500;
+          background: linear-gradient(118deg, rgba($primary, 1), rgba($primary, 0.7));
+          box-shadow: 0 0 10px 1px rgba($primary, 0.7);
+          color: $white;
+          font-weight: 400;
           border-radius: 4px;
         }
       }
@@ -327,11 +305,7 @@
         }
 
         .active {
-          background: linear-gradient(
-            118deg,
-            rgba($primary, 1),
-            rgba($primary, 0.7)
-          );
+          background: linear-gradient(118deg, rgba($primary, 1), rgba($primary, 0.7));
           box-shadow: 0 0 10px 1px rgba($primary, 0.7);
           border-radius: 4px;
           z-index: 1;
@@ -347,12 +321,7 @@
 // $menu-expanded-width : Expanded menu width
 // $menu-collapsed-width: Collapsed menu width
 // ================================================
-@mixin menu-content(
-  $menu-expanded-width,
-  $menu-collapsed-width,
-  $theme-color,
-  $theme-bg
-) {
+@mixin menu-content($menu-expanded-width, $menu-collapsed-width, $theme-color, $theme-bg) {
   .main-menu-content {
     > span.menu-title,
     a.menu-title {
