--- a/src/@core/scss/base/pages/page-knowledge-base.scss
+++ b/src/@core/scss/base/pages/page-knowledge-base.scss
@@ -7,8 +7,8 @@
 //  Author URL: http://www.themeforest.net/user/pixinvent
 // ================================================================================================
 
-@import '../bootstrap-extended/include'; // Bootstrap includes
-@import '../components/include'; // Components includes
+@import "../bootstrap-extended/include"; // Bootstrap includes
+@import "../components/include"; // Components includes
 
 $svg-bg: #fcfcfc;
 
@@ -63,7 +63,7 @@ $svg-bg: #fcfcfc;
 @include media-breakpoint-up(lg) {
   .knowledge-base-bg {
     .card-body {
-      padding: 8rem;
+      padding: 4rem;
     }
   }
 }
