--- a/src/@core/scss/base/core/menu/_navigation.scss
+++ b/src/@core/scss/base/core/menu/_navigation.scss
@@ -8,7 +8,7 @@
 ==========================================================================================*/
 
 // Import first main menu mixin
-@import '../mixins/main-menu-mixin';
+@import "../mixins/main-menu-mixin";
 
 // Main menu base
 //==============
@@ -56,9 +56,17 @@
     pointer-events: none;
     margin-top: -0.7rem;
     filter: blur(5px);
-    background: linear-gradient(#fff 41%, hsla(0, 0%, 100%, 0.11) 95%, hsla(0, 0%, 100%, 0));
+    background: linear-gradient(
+      #fff 41%,
+      hsla(0, 0%, 100%, 0.11) 95%,
+      hsla(0, 0%, 100%, 0)
+    );
     .bordered-layout & {
-      background: linear-gradient($body-bg 41%, hsla(0, 0%, 100%, 0.11) 95%, hsla(0, 0%, 100%, 0));
+      background: linear-gradient(
+        $body-bg 41%,
+        hsla(0, 0%, 100%, 0.11) 95%,
+        hsla(0, 0%, 100%, 0)
+      );
     }
   }
 
@@ -79,10 +87,10 @@
     .navbar-brand {
       display: flex;
       align-items: center;
-      margin-top: 1.35rem;
+      margin-top: 0.65rem;
       font-size: inherit;
       .brand-logo img {
-        max-width: 36px;
+        max-width: 40px;
       }
       .brand-text {
         color: $primary;
@@ -91,11 +99,13 @@
         font-weight: 600;
         letter-spacing: 0.01rem;
         font-size: 1.45rem;
-        animation: 0.3s cubic-bezier(0.25, 0.8, 0.25, 1) 0s normal forwards 1 fadein;
+        animation: 0.3s cubic-bezier(0.25, 0.8, 0.25, 1) 0s normal forwards 1
+          fadein;
       }
     }
     .modern-nav-toggle {
-      animation: 0.3s cubic-bezier(0.25, 0.8, 0.25, 1) 0s normal forwards 1 fadein;
+      animation: 0.3s cubic-bezier(0.25, 0.8, 0.25, 1) 0s normal forwards 1
+        fadein;
     }
   }
 
@@ -114,7 +124,7 @@
 
     &.navigation-main {
       overflow-x: hidden;
-      padding-bottom: .75rem;
+      padding-bottom: 0.75rem;
       > li:first-child {
         margin-top: 0.5rem;
       }
